formatting application
without AllPosts page